final-septiembre-2024/ollama.sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui-service
  labels:
    app: webui-service
spec:
  ports:
  - port: 3000
    targetPort: 8080
  selector:
    app: webui-app
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webui-app
spec:
  selector:
    matchLabels:
      app: webui-app
  serviceName: "webui-service"
  replicas: 1
  template:
    metadata:
      labels:
        app: webui-app
    spec:
      containers:
      - name: open-webui
        image: ghcr.io/open-webui/open-webui:main
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: webui-data-pvc
          mountPath: /app/backend/data
  volumeClaimTemplates:
  - metadata:
      name: webui-data-pvc
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
