final-septiembre-2024/ollama.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
  name: kanban-ingress
spec:
  rules:
  - host: amontana-ollama.my.kube.um.edu.ar
    http:
      paths:
      - backend:
          service:
            name: webui-service
            port:
              number: 8080
        path: /
        pathType: Prefix
